3.1-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-app1
  name: hello-app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app1
  template:
    metadata:
      labels:
        app: hello-app1
    spec:
      containers:
        - image: gcr.io/google-samples/hello-app:1.0
          name: hello-app1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-app2
  name: hello-app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app2
  template:
    metadata:
      labels:
        app: hello-app2
    spec:
      containers:
        - image: gcr.io/google-samples/hello-app:2.0
          name: hello-app1
