7.0-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mywebsite-app
  name: mywebsite-app
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: mywebsite-app
  type: NodePort
