7.1-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-app1
  name: hello-app1
spec:
  ports:
     - port: 8080
       protocol: TCP
       targetPort: 8080
  selector:
    app: hello-app1
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-app2
  name: hello-app2
spec:
  ports:
     - port: 8080
       protocol: TCP
       targetPort: 8080
  selector:
    app: hello-app2
  type: NodePort
